--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "MEAN stack application",
   "main": "app.js",
   "scripts": {
-    "start" : "node app.js",
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/wiltrahan/mean-stack-app-2#readme",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "express": "^4.15.5"
   },
   "devDependencies": {
