--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.15.5",
-    "mongodb": "^2.2.31"
+    "mongodb": "^2.2.31",
+    "mongoose": "^4.11.13"
   },
   "devDependencies": {
     "mocha": "^3.5.3"
