--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "angular": "^1.6.6",
     "angular-route": "^1.6.6",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.2",
     "express": "^4.15.5",
     "mongodb": "^2.2.31",
