--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.2",
     "express": "^4.15.5",
+    "jsonwebtoken": "^8.0.1",
     "mongodb": "^2.2.31",
     "mongoose": "^4.11.13"
   },
