--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/wiltrahan/mean-stack-app-2#readme",
   "dependencies": {
     "angular": "^1.6.6",
+    "angular-jwt": "^0.1.9",
     "angular-route": "^1.6.6",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.2",
